# MoldVision

./: LICENSE  README.md  pyproject.toml
configs/: config.py  default.yaml
examples/: train_model.py
scripts/: combine_predictions.py  main.py  test_lgbm.py  test_vgg.py  train_lgbm.py  train_vgg.py
src/data/: __init__.py  data.py  lgbm_feature_extract.py
src/databases/: __init__.py  database.py
src/models/: __init__.py  default_model.py  lightgbm_model.py  moldvision.py  sixchan_model.py  twin_model.py
src/utils/: lgbm_feature_extract.py
tests/: lightgbm_model_tests.py  mold_dataset_tests.py  mold_vgg_model_tests.py
