[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = ""
version = "0.1.0"
description = "A PyTorch VGG16 classifier"
authors = [{ name="Lukas Weber", email="lukas.weber6@uzh.ch" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "pytorch-lightning>=2.2.1",
  "torchmetrics>=1.71"
]

[project.scripts]
train_model = "models.run:main"