[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Moldvision Toolkit"
version = "0.1.0"
description = "A PyTorch VGG16 classifier"
authors = [{ name="Lukas Weber", email="lukas.weber6@uzh.ch" }]
license = { text = "BSD 3-Clause" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "pytorch-lightning>=2.2.1",
  "torchmetrics>=1.71"
]

[project.urls]
Homepage = "https://github.com/lucius97/moldvision-toolkit"
Repository = "https://github.com/lucius97/moldvision-toolkit"
Issues = "https://github.com/lucius97/moldvision-toolkit/issues"

[project.scripts]
train_model = "models.run:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]

[tool.setuptools.include-package-data]
include_package_data = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]